--- a/index.html
+++ b/index.html
@@ -347,19 +347,19 @@
         </div>
         <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
-                <div class="row clearfix" style="margin-bottom: 140px">
-                    <div class="col-lg-5">
+                <div class="row clearfix" style="margin-bottom: 50px">
+                    <div class="col-lg-7">
                         <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
                             <h2>Encontrar tu identidad Digital, nunca fue tan fácil.</h2>
                         </div>
-                        <p class="lead">Sabemos que un sitio web es la mejor forma para llegar a cualquier lugar, pero no cualquier sitio web asegura el éxito de tu empresa o compañía.</p>
+                        <p class="lead text-justify">Sabemos que un sitio web es la mejor forma para llegar a cualquier lugar, pero no cualquier sitio web asegura el éxito de tu empresa o compañía.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="nosotros.html">
                             <i class="icon-line-arrow-right"></i>
                             <span>Nosotros</span>
                         </a>
                     </div>
-                    <div class="col-lg-7" style="margin-top: -50px">
-                        <img src="images/nosotros/1.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
+                    <div class="col-lg-5">
+                        <img src="images/logos/home.png" data-animate="fadeInRight" data-delay="100" alt="CreativosPlus">
                     </div>
                 </div>
                 <div class="row">
@@ -371,7 +371,7 @@
                                 </a>
                             </div>
                             <h3 class="texto-verde">Conocemos tu idea</h3>
-                            <p class="lead" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
+                            <p class="lead text-justify" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -382,7 +382,7 @@
                                 </a>
                             </div>
                             <h3 class="texto-verde">Diseñamos</h3>
-                            <p class="lead" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web.</p>
+                            <p class="lead text-justify" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -393,7 +393,7 @@
                                 </a>
                             </div>
                             <h3 class="texto-verde">Desarrollamos</h3>
-                            <p class="lead" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
+                            <p class="lead text-justify" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -404,7 +404,7 @@
                                 </a>
                             </div>
                             <h3 class="texto-verde">Entregamos identidad</h3>
-                            <p class="lead" style="font-size: 18px !important;">Finalizamos todas tus ideas y las hacemos realidad al mejor precio.</p>
+                            <p class="lead text-justify" style="font-size: 18px !important;">Finalizamos todas tus ideas y las hacemos realidad al mejor precio.</p>
                         </div>
                     </div>
                 </div>
@@ -426,7 +426,7 @@
                                 <i class="texto-blanco icon-line2-speedometer"></i>
                             </div>
                             <h3 class="texto-blanco"><strong>Rapidez</strong></h3>
-                            <p class="texto-blanco">Entregamos tu proyecto en la menor cantidad de tiempo posible.</p>
+                            <p class="texto-blanco text-justify">Entregamos tu proyecto en la menor cantidad de tiempo posible.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-4">
@@ -435,7 +435,7 @@
                                 <i class="texto-blanco icon-users1"></i>
                             </div>
                             <h3 class="texto-blanco">Expertos</h3>
-                            <p class="texto-blanco">Somos un equipo de profesionales en el desarrollo web que entienden la necesidad de tu proyecto.</p>
+                            <p class="texto-blanco text-justify">Somos un equipo de profesionales en el desarrollo web que entienden la necesidad de tu proyecto.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-4">
@@ -444,7 +444,7 @@
                                 <i class="texto-blanco icon-handshake"></i>
                             </div>
                             <h3 class="texto-blanco">Confianza</h3>
-                            <p class="texto-blanco">La responsabilidad es una de nuestras mayores virtudes.</p>
+                            <p class="texto-blanco text-justify">La responsabilidad es una de nuestras mayores virtudes.</p>
                         </div>
                     </div>
                 </div>
@@ -455,7 +455,7 @@
                                 <i class="texto-blanco icon-headset"></i>
                             </div>
                             <h3 class="texto-blanco">Soporte</h3>
-                            <p class="texto-blanco">Estamos disponibles siempre para atender sus inquietudes.</p>
+                            <p class="texto-blanco text-justify">Estamos disponibles siempre para atender sus inquietudes.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-4">
@@ -464,7 +464,7 @@
                                 <i class="texto-blanco icon-world"></i>
                             </div>
                             <h3 class="texto-blanco">Presencia</h3>
-                            <p class="texto-blanco">Contamos con lo que necesitas para estar en el mundo digital.</p>
+                            <p class="texto-blanco text-justify">Contamos con lo que necesitas para estar en el mundo digital.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-4">
@@ -473,7 +473,7 @@
                                 <i class="texto-blanco icon-plus"></i>
                             </div>
                             <h3 class="texto-blanco">Nuestro <strong>PLUS</strong></h3>
-                            <p class="texto-blanco">Te otorgamos ese plus que no te ofrecen los demás.</p>
+                            <p class="texto-blanco text-justify">Te otorgamos ese plus que no te ofrecen los demás.</p>
                         </div>
                     </div>
                 </div>
@@ -511,7 +511,7 @@
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Web Profesional</h3>
-                            <p>Trabajamos contigo, para ofrecerte el sitio web e identidad que tu negocio necesita, buscando un diseño único e impactante para tus clientes.</p>
+                            <p class="lead text-justify">Trabajamos contigo, para ofrecerte el sitio web e identidad que tu negocio necesita, buscando un diseño único e impactante para tus clientes.</p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="diseno-web.html">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Ver más</span>
@@ -526,7 +526,7 @@
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Gráfico Profesional</h3>
-                            <p>Conocemos la filosofía de cada marca creando los mejores diseños para potenciar la identidad de tu organización, empresa o compañía. </p>
+                            <p class="lead text-justify">Conocemos la filosofía de cada marca creando los mejores diseños para potenciar la identidad de tu organización, empresa o compañía. </p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="diseno-grafico.html">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Ver más</span>
@@ -541,7 +541,7 @@
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Marketing Digital</h3>
-                            <p>Desarrolla de la mano de CreativosPlus en el área de marketing digital estrategias y soluciones que te permitan alcanzar las metas de tu negocio.</p>
+                            <p class="lead text-justify">Desarrolla de la mano de CreativosPlus en el área de marketing digital estrategias y soluciones que te permitan alcanzar las metas de tu negocio.</p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="marketing.html">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Ver más</span>
@@ -556,7 +556,7 @@
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>SEO</h3>
-                            <p>Una marca posicionada es una marca exitosa, Creativosplus lo hace de manera orgánica creando estrategias para potenciar tu marca en todos los buscadores.</p>
+                            <p class="lead text-justify">Una marca posicionada es una marca exitosa, Creativosplus lo hace de manera orgánica creando estrategias para potenciar tu marca en todos los buscadores.</p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="seo.html">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Ver más</span>
@@ -594,10 +594,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://jjcustomsolution.com/" class="item" style="background-image: url('images/gallery/jjsolutions.jpg');"></a>
+                                    <a target="_blank" href="http://jjcustomsolution.com/" class="item" style="background-image: url('images/portafolio/web/jjsolutions.jpg');"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://addictivebeautynow.com/" class="item" style="background-image: url('images/gallery/addictivebeautyspa.jpg');"></a>
+                                    <a target="_blank" href="http://addictivebeautynow.com/" class="item" style="background-image: url('images/portafolio/web/addictivebeautyspa.jpg');"></a>
                                 </li>
                             </ul>
                             <ul class="carousel-column column-2">
@@ -610,10 +610,10 @@
                                     </div>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://www.serviplotca.com/" class="item" style="background-image: url('images/gallery/serviplotca.jpg'); min-height: 300px"></a>
+                                    <a target="_blank" href="http://www.serviplotca.com/" class="item" style="background-image: url('images/portafolio/web/serviplotca.jpg'); min-height: 300px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="https://weare-yourfriends.com/" class="item" style="background-image: url('images/gallery/wayf.jpg'); min-height: 380px"></a>
+                                    <a target="_blank" href="https://weare-yourfriends.com/" class="item" style="background-image: url('images/portafolio/web/wayf.jpg'); min-height: 380px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -622,10 +622,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://petroleumblg.com/" class="item" style="background-image: url('images/gallery/blg.jpg'); min-height: 500px"></a>
+                                    <a target="_blank" href="http://petroleumblg.com/" class="item" style="background-image: url('images/portafolio/web/blg.jpg'); min-height: 500px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://www.drycleaningontherun.com/" class="item" style="background-image: url('images/gallery/drycleaning.jpg'); min-height: 405px"></a>
+                                    <a target="_blank" href="http://www.drycleaningontherun.com/" class="item" style="background-image: url('images/portafolio/web/drycleaning.jpg'); min-height: 405px"></a>
                                 </li>
                             </ul>
                         </div>
