--- a/nosotros.html
+++ b/nosotros.html
@@ -351,20 +351,18 @@
       <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
          <div class="container clearfix">
             <div class="row clearfix">
-               <div class="col-lg-5">
-                  <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
+               <div class="col-lg-7">
+                  <div class="heading-block topmargin center" style="margin-bottom: 0 !important;">
                      <h2>Conoce más de Nosotros</h2>
                   </div>
-                  <p class="lead">En CreativosPlus construimos sitios web de alta calidad, con diseños únicos, innovadores y amigables para tus clientes. Somos ese PLUS que hará de tu sitio web una solución efectiva a tu estrategia digital.</p>
+                  <p class="lead text-justify">En CreativosPlus construimos sitios web de alta calidad, con diseños únicos, innovadores y amigables para tus clientes. Somos ese PLUS que hará de tu sitio web una solución efectiva a tu estrategia digital.</p>
                   <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                      <i class="icon-line-arrow-right"></i>
                      <span>Contáctanos</span>
                   </a>
                </div>
-               <div class="col-lg-7">
-                  <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
-                     <img src="images/nosotros/3..jpg" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
-                  </div>
+               <div class="col-lg-5">
+                  <img src="images/nosotros/3..jpg" style="position: absolute; top: 50px; left: 50px;" data-animate="fadeInRight" data-delay="100" alt="Chrome">
                </div>
             </div>
             <div class="line"></div>
@@ -380,7 +378,7 @@
                         </a>
                      </div>
                      <h3 class="texto-verde">Conocemos tu idea</h3>
-                     <p class="lead" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
+                     <p class="lead text-justify" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
@@ -391,7 +389,7 @@
                         </a>
                      </div>
                      <h3 class="texto-verde">Diseñamos</h3>
-                     <p class="lead" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web</p>
+                     <p class="lead text-justify" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
@@ -402,7 +400,7 @@
                         </a>
                      </div>
                      <h3 class="texto-verde">Desarrollamos</h3>
-                     <p class="lead" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
+                     <p class="lead text-justify" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
@@ -413,23 +411,21 @@
                         </a>
                      </div>
                      <h3 class="texto-verde">Entregamos identidad</h3>
-                     <p class="lead" style="font-size: 18px !important;">Finalizamos todas tus ideas y las hacemos realidad al mejor precio.</p>
+                     <p class="lead text-justify" style="font-size: 18px !important;">Finalizamos todas tus ideas y las hacemos realidad al mejor precio.</p>
                   </div>
                </div>
             </div>
             <div class="line"></div>
             <div class="row clearfix">
-               <div class="col-lg-7">
-                  <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
-                     <img src="images/nosotros/2..jpg" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
-                  </div>
-               </div>
                <div class="col-lg-5">
-                  <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
+                  <img src="images/nosotros/2..jpg" style="position: absolute; top: 70px; left: -20px;" data-animate="fadeInLeft" data-delay="100" alt="Chrome">
+               </div>
+               <div class="col-lg-7">
+                  <div class="heading-block topmargin center" style="margin-bottom: 0 !important;">
                         <h2>Nuestra Misión</h2>
                   </div>
-                  <p class="lead"></p>
-                  <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                  <p class="lead text-justify">En CreativosPlus construimos sitios web de alta calidad, con diseños únicos, innovadores y amigables para tus clientes. Somos ese PLUS que hará de tu sitio web una solución efectiva a tu estrategia digital.</p>
+                  <a class="fright btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                      <i class="icon-line-arrow-right"></i>
                      <span>Contáctanos</span>
                   </a>
