--- a/nosotros.html
+++ b/nosotros.html
@@ -377,7 +377,7 @@
                            <i class="i-alt">1</i>
                         </a>
                      </div>
-                     <h3 class="texto-verde">Conocemos tu idea</h3>
+                     <h3 class="texto-verde">Expertos</h3>
                      <p class="lead text-justify" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
                   </div>
                </div>
@@ -388,7 +388,7 @@
                            <i class="i-alt">2</i>
                         </a>
                      </div>
-                     <h3 class="texto-verde">Diseñamos</h3>
+                     <h3 class="texto-verde">Creativos</h3>
                      <p class="lead text-justify" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web</p>
                   </div>
                </div>
@@ -399,7 +399,7 @@
                            <i class="i-alt">3</i>
                         </a>
                      </div>
-                     <h3 class="texto-verde">Desarrollamos</h3>
+                     <h3 class="texto-verde">Profesionales</h3>
                      <p class="lead text-justify" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
                   </div>
                </div>
@@ -410,8 +410,8 @@
                            <i class="i-alt">4</i>
                         </a>
                      </div>
-                     <h3 class="texto-verde">Entregamos identidad</h3>
-                     <p class="lead text-justify" style="font-size: 18px !important;">Finalizamos todas tus ideas y las hacemos realidad al mejor precio.</p>
+                     <h3 class="texto-verde">Responsables</h3>
+                     <p class="lead text-justify" style="font-size: 18px !important;">Finalizamos todas tus ideas haciendo realidad tu sueño de manera profesional.</p>
                   </div>
                </div>
             </div>
