--- a/nosotros.html
+++ b/nosotros.html
@@ -389,7 +389,7 @@
                         </a>
                      </div>
                      <h3 class="texto-verde">Diseñamos</h3>
-                     <p class="lead text-justify" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web</p>
+                     <p class="lead text-justify" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web.</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
