--- a/diseno-web.html
+++ b/diseno-web.html
@@ -406,6 +406,54 @@
                 <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/iphone-3d.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
+        <div class="section noborder nomargin">
+            <div class="container">
+                <div class="heading-block center">
+                    <h2>¿Tienes dudas? mira las Preguntas Frecuentes</h2>
+                </div>
+                <div class="clear"></div>
+                <div id="faqs" class="faqs topmargin">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="toggle faq">
+                                <div class="togglet texto-verde">
+                                    <i class="toggle-closed icon-question-sign texto-verde"></i>
+                                    <i class="toggle-open icon-question-sign texto-verde"></i>
+                                    <span class="texto-azul">¿Cuanto tiempo tardan las páginas web en realizarse?
+                                </div>
+                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Esto dependerá de los requerimientos de cada cliente, teniendo en cuenta dificultad o facilidad del sitio web ideal para cada uno.</div>
+                            </div>
+                            <div class="toggle faq">
+                                <div class="togglet texto-azul">
+                                    <i class="toggle-closed icon-comments-alt texto-verde"></i>
+                                    <i class="toggle-open icon-comments-alt texto-verde"></i>
+                                    ¿Qué necesito para tener una página web?
+                                </div>
+                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lo primero que necesitas es tener una idea digital, luego buscar expertos como nosotros que lleven a cabo tu idea.</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="toggle faq">
+                                <div class="togglet texto-azul">
+                                    <i class="toggle-closed icon-picture texto-verde"></i>
+                                    <i class="toggle-open icon-picture texto-verde"></i>
+                                    ¿Por qué debo optimizar mi sitio web?
+                                </div>
+                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lo más importante de un sitio web es la visibilidad y satisfacción de los usuarios/clientes, es por esto que tu sitio web debe estar optimizado para así ganar prestigio.</div>
+                            </div>
+                            <div class="toggle faq">
+                                <div class="togglet texto-azul">
+                                    <i class="toggle-closed icon-smile1 texto-verde"></i>
+                                    <i class="toggle-open icon-smile1 texto-verde"></i>
+                                    ¿Como realizan los logotipos?
+                                </div>
+                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Realizamos bocetos e ilustraciones para encontrar el ADN de tu negocio convirtiéndolo en un formato digital que represente la identidad deseada.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer id="footer" class="bg-azul">
         <div class="container">
