--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -356,7 +356,7 @@
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t500">Logotipos</h2>
                         </div>
-                        <p class="lead">Conocemos que esta es la parte más importante de su negocio, su imagen corporativa y creativa al mundo, Creativosplus logra encontrar su identidad con un diseño a la medida.</p>
+                        <p class="lead text-justify">Conocemos que esta es la parte más importante de su negocio, su imagen corporativa y creativa al mundo, Creativosplus logra encontrar su identidad con un diseño a la medida.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -373,7 +373,7 @@
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Identidad Corporativa</h2>
                         </div>
-                        <p class="lead">Transmitimos por medio de componentes físicos y digitales el concepto de tu negocio, con tu identidad corporativa lograremos darle valor a tu marca.</p>
+                        <p class="lead text-justify">Transmitimos por medio de componentes físicos y digitales el concepto de tu negocio, con tu identidad corporativa lograremos darle valor a tu marca.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -394,7 +394,7 @@
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Videos y Animación</h2>
                         </div>
-                        <p class="lead">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado para vender su marca.</p>
+                        <p class="lead text-justify">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado para vender su marca.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
