--- a/diseno-web.html
+++ b/diseno-web.html
@@ -356,7 +356,7 @@
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t500">Diseño Web para Empresas</h2>
                         </div>
-                        <p class="lead">Diseñamos y creamos presencia en internet de manera efectiva con tu imagen corporativa, teniendo en cuenta tus objetivos empresariales.</p>
+                        <p class="lead text-justify">Diseñamos y creamos presencia en internet de manera efectiva con tu imagen corporativa, teniendo en cuenta tus objetivos empresariales.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -373,7 +373,7 @@
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Tiendas Virtuales</h2>
                         </div>
-                        <p class="lead">Llevamos tu tienda física al mundo online con las mejores opciones del mercado, no importa si tu empresa es pequeña o grande, creamos soluciones efectivas para tu negocio o empresa.</p>
+                        <p class="lead text-justify">Llevamos tu tienda física al mundo online con las mejores opciones del mercado, no importa si tu empresa es pequeña o grande, creamos soluciones efectivas para tu negocio o empresa.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -394,7 +394,7 @@
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Re-diseño Web</h2>
                         </div>
-                        <p class="lead">Tener una buena imagen online es muy importante, CreativosPlus se encarga de darte la imagen innovadora que necesitas, con las mejores tecnologías del mercado.</p>
+                        <p class="lead text-justify">Tener una buena imagen online es muy importante, CreativosPlus se encarga de darte la imagen innovadora que necesitas, con las mejores tecnologías del mercado.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -406,7 +406,7 @@
                 <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/iphone-3d.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
-        <div class="section noborder nomargin">
+        <!-- <div class="section noborder nomargin">
             <div class="container">
                 <div class="heading-block center">
                     <h2>¿Tienes dudas? mira las Preguntas Frecuentes</h2>
@@ -453,7 +453,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     <footer id="footer" class="bg-azul">
         <div class="container">
