--- a/marketing.html
+++ b/marketing.html
@@ -354,9 +354,9 @@
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Campañas de Marketing Digital</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Campañas de Marketing</h2>
                         </div>
-                        <p class="lead">buscamos convertirnos en tu mejor aliado, con nosotros podrás encontrar todas las herramientas necesarias para que tu marca llegue a todos tus clientes potenciales a través de diferentes medios digitales.</p>
+                        <p class="lead text-justify">Buscamos convertirnos en tu mejor aliado, con nosotros podrás encontrar todas las herramientas necesarias para que tu marca llegue a todos tus clientes potenciales a través de diferentes medios digitales.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -373,7 +373,7 @@
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Social Media</h2>
                         </div>
-                        <p class="lead">Tus potenciales clientes están en la red, es por esto que tu marca debe estarlo también. CreativosPlus busca trasmitir el ADN de tu marca en las plataformas digitales más importantes, creando estrategias y anuncios de valor para posicionar tu marca y crear una comunidad activa.</p>
+                        <p class="lead text-justify">Tus potenciales clientes están en la red, es por esto que tu marca debe estarlo también. CreativosPlus busca trasmitir el ADN de tu marca en las plataformas digitales más importantes, creando estrategias y anuncios de valor para posicionar tu marca y crear una comunidad activa.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -384,7 +384,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
         <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
                 <div class="row clearfix">
@@ -392,9 +392,9 @@
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Analítica Digital</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Branding</h2>
                         </div>
-                        <p class="lead">Diseñamos una estrategia de medición de acuerdo a los objetivos de tu negocio, conociendo donde están tus clientes más activos.</p>
+                        <p class="lead text-justify">Diseñamos una estrategia de medición de acuerdo a los objetivos de tu negocio, conociendo donde están tus clientes más activos.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
